apps/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: plex               
  name: plex                
  namespace: plex           
spec:
  replicas: 1                     
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: plex
  strategy:
    rollingUpdate:
      maxSurge: 0                 
      maxUnavailable: 1           
    type: RollingUpdate           
  template:
    metadata:
      labels:
        app: plex
    spec:
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: plex-config-pvc 
      - name: data
        persistentVolumeClaim:
          claimName: plex-data-pvc 
      containers:
      - env:                      
        - name: PLEX_CLAIM
          value: claim-2GvGs_NoMxjWBRqeGzF2 
        - name: PGID
          value: "101"
        - name: PUID
          value: "1030"
        - name: TZ
          value: America/New_York 
        image: ghcr.io/linuxserver/plex
        imagePullPolicy: Always 
        name: plex 
        ports:
          - name: plex-port
            containerPort: 32400  
            protocol: TCP
        resources: {}
        stdin: true
        tty: true
        volumeMounts:            
        - mountPath: /config     
          name: config 
        - mountPath: /data
          name: data 
      restartPolicy: Always
      readinessProbe:
        tcpSocket:
          port: 32400
        initialDelaySeconds: 20
        periodSeconds: 15
