apps/plex/ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: plex
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex
    app.kubernetes.io/version: 1.16.0
  name: plex
  namespace: plex
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: plex
      app.kubernetes.io/name: plex
  serviceName: plex
  template:
    metadata:
      annotations: {}
      labels:
        app: plex
        app.kubernetes.io/instance: plex
        app.kubernetes.io/name: plex
        app.kubernetes.io/version: 1.16.0
    spec:
      securityContext:
        supplementalGroups:
          - 44
          - 991
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values: [metal0]
      containers:
        - env:
          - name: TZ
            value: America/New_York
          - name: VERSION
            value: docker
          image: lscr.io/linuxserver/plex@sha256:be083133dfe001b6caed5a321720e6db9d38fdde1ea8f9d29340d40057a7fa53
          imagePullPolicy: IfNotPresent
          name: plex-pms
          resources:
            limits:
              # Device-plugin allocation grants access to just the assigned DRM
              # devices.  This avoids a privileged container and a broad hostPath.
              gpu.intel.com/i915: 1
          ports:
            - containerPort: 32400
              name: pms
          volumeMounts:
            - mountPath: /config
              name: pms-config
            - mountPath: /transcode
              name: pms-transcode
            - mountPath: /media
              name: pms-media
      initContainers: []
      nodeSelector: {}
      serviceAccountName: plex
      terminationGracePeriodSeconds: 120
      tolerations: []
      volumes:
        - name: pms-transcode
          emptyDir: {}
        - name: pms-media
          nfs:
            server: 192.168.1.208
            path: /volume1/Media
            readOnly: false
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: pms-config
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            # Plex metadata and preview art have outgrown the original claim.
            # Longhorn supports online expansion; 20Gi restores operating
            # headroom without changing the application's storage topology.
            storage: 20Gi
