apps/plex/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: plex-udp
  namespace: plex
  annotations:
    metallb.universe.tf/allow-shared-ip: plex-svc
spec:
  selector:
    app: plexserver
  ports:
    - port: 1900
      targetPort: 1900
      name: dlna-udp
      protocol: UDP
    - port: 5353
      targetPort: 5353
      name: discovery-udp
      protocol: UDP
  type: LoadBalancer
  loadBalancerIP: 192.168.151.62
---
kind: Service
apiVersion: v1
metadata:
  name: plex-tcp
  namespace: plex
  annotations:
    metallb.universe.tf/allow-shared-ip: plex-svc
spec:
  selector:
    app: plexserver
  ports:
    - port: 32400
      targetPort: 32400
      name: pms-web
      protocol: TCP
    - port: 32469
      targetPort: 32469
      name: dlna-tcp
      protocol: TCP
  type: LoadBalancer
  loadBalancerIP: 192.168.151.62
