apps/plex/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    # Dedicated direct-access IP; .229 is the Argo Workflows gateway.
    lbipam.cilium.io/ips: "192.168.1.231"
  labels:
    app: plex
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: plex-media-server-0.3.0
  name: plex
  namespace: plex
spec:
  ports:
    - name: pms
      port: 32400
      protocol: TCP
      targetPort: 32400
  selector:
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex
  type: LoadBalancer
