apps/plex/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    hajimari.io/appName: Plex
    hajimari.io/icon: movie-open
  labels:
    app.kubernetes.io/instance: plex
  name: plex
  namespace: plex
spec:
  ingressClassName: istio
  rules:
    - host: plex.kleinsorge.dev
      http:
        paths:
        - path: '/'
          pathType: Prefix
          backend:
            service:
              name: plex
              port:
                number: 32400
  tls:
    - hosts:
        - plex.kleinsorge.dev
      secretName: plex-tls-certificate
