apps/plex/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: plexserver
  namespace: plex
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"    
    nginx.ingress.kubernetes.io/app-root: /web 
    hajimari.io/enable: 'true'
    hajimari.io/appName: 'plex'
    hajimari.io/icon: 'plex'    
spec:
  rules:
     - host: &host plex.kleinsorge.dev
        http:
          paths:
            - path: /
              backend:
                serviceName: plex-tcp
                servicePort: pms-web
       tls:
        - secretName: plex-tls-certificate
          hosts:
            - *host
